[package]
name = "coolercontrold"
version = "4.0.2"
authors = ["Guy Boldon <gb@guyboldon.com>"]
edition = "2024"
# MSRV for all included libraries
# We should only increase this when we drop support for older distros.
# 1.85 is the newest-supported version for 22.04 LTS Jammy.
rust-version = "1.85"
description = "Monitor and control your cooling and other devices"
documentation = "https://coolercontrol.org"
readme = "README.md"
categories = ["hardware-support"]
keywords = ["temperature", "hardware", "cooling", "fan", "monitor"]
homepage = "https://coolercontrol.org"
repository = "https://gitlab.com/coolercontrol/coolercontrol"
license = "GPL-3.0-or-later"

[features]
default = []
io_uring = ["dep:tokio-uring"]

[dependencies]
cc-detect = { path = "../cc-detect" }
log = "0.4.29"
env_logger = "0.11.9"
systemd-journal-logger = "2.2.2"
clap = { version = "4.5.60", features = [
  "derive",
] } # Command line argument parser - pkg
anyhow = "1.0.102"
derive_more = { version = "2.1.1", features = ["display", "error"] }
tokio = { version = "1.50.0", default-features = false, features = [
  "rt",
  "fs",
  "macros",
  "parking_lot",
  "time",
  "sync",
  "signal",
  "net",
  "io-std",
  "io-util",
] }
tokio-uring = { version = "0.5.0", optional = true }
tokio-util = "0.7.18"
tokio-stream = { version = "0.1.18", default-features = false, features = [
  "sync",
  "io-util",
] }
moro-local = "0.4.0"
async-trait = "0.1.89"
bitflags = { version = "2.11.0", features = ["serde"] }
axum = { version = "0.8.8", features = ["multipart", "macros", "query"] }
# This should follow the dependencies of axum version as well
tower = { version = "0.5.3" }
tower-http = { version = "0.6.8", features = [
  "timeout",
  "trace",
  "limit",
  "cors",
  "normalize-path",
  "compression-full",
  "decompression-full",
  "fs",
] }
tower-sessions = { version = "0.15.0", features = ["private"] }
tower-sessions-core = { version = "0.15.0", features = ["deletion-task"] }
moka = { version = "0.12", features = ["future"] }
base64 = "0.22"
# time > 0.3.45 requires rust >=1.88
time = "=0.3.45"
tower-serve-static = "0.1.1"
include_dir = "0.7.4"
aide = { version = "0.15.1", features = [
  "axum",
  "axum-json",
  "axum-query",
  "axum-multipart",
] }
# this needs to follow the aide version above (currently 0.9.0)
schemars = { version = "=0.9.0", features = ["chrono04"] }
mime = "0.3.17"
# axum-typed-multipart 0.16.5 requires >=1.88
axum_typed_multipart = "=0.16.4"
# axum-typed-multipart-macros is a dependency of axum-typed-multipart that, if pinned, we should pin to the same version
axum_typed_multipart_macros = "=0.16.4"
# possible openApi improvement, but doesn't work for us currently:
#aide-axum-typed-multipart-2 = "0.16.0"
# TLS support
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rcgen = "0.14.7"
pin-project-lite = "0.2"
tokio-rustls = "0.26"
tempfile = "3.26.0"
hyper = { version = "1.8.1", default-features = false, features = [
  "http1",
  "client",
] }
hyper-util = { version = "0.1.20", default-features = false, features = [
  "client",
  "http1",
  "tokio",
] }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
# zbus >=5.14.0 requires >=1.87
zbus = { version = "=5.13.0", default-features = false, features = [
  "tokio",
] } # our preferred DBus lib
futures-util = { version = "0.3.32", default-features = false, features = [
  "std",
] } # future utilities we use like join3
# sysinfo 0.37 requires >=1.88
sysinfo = { version = "=0.36", default-features = false, features = [
  "system",
] } # gets detailed system info
chrono = { version = "0.4.43", features = [
  "serde",
] } # We use timestamps in our status history
strum = { version = "0.28.0", features = ["derive"] } # Enum -> String
regex = "1.12.3"
heck = "0.5.0" # hanldes case conversion like CamelCase and Title Case.
# nu-glob 0.108 requires >=1.86
nu-glob = "=0.107"
nvml-wrapper = "0.12.0"
sha2 = "0.10.9"
argon2 = "0.5"
subtle = "2.6"
toml_edit = "0.23.9"
nix = { version = "0.31.2", default-features = false, features = [
  "user",
  "signal",
  "process",
  "sched",
] }
pciid-parser = "0.8.0"
libdrm_amdgpu_sys = { version = "0.8.11", default-features = false, features = [
  "dynamic_loading",
] }
indexmap = "2"
yata = "0.7.0" # moving averages
tiny-skia = "0.12.0" # vector image creation
ril = { version = "0.10.3", default-features = false, features = [
  "png",
  "text",
] } # Text rendering on image
# image 0.25.9 requires >=1.87
image = { version = "=0.25.8", default-features = false, features = [
  "rayon",
  "gif",
  "jpeg",
  "ico",
  "png",
  "tiff",
  "bmp",
  "webp",
] } # image processing
gifski = { version = "1.34.0", default-features = false, features = [
  "gifsicle",
] } # gif processing
imgref = "1.12.0" # for gif processing
rgb = "0.8.52" # for gif processing
uuid = { version = "1.22.0", features = ["v4"] }
# service plugin dependencies
tonic = { version = "0.14.5", default-features = false, features = [
  "channel",
  "codegen",
  "server",
  "transport",
  "router",
] }
prost = "0.14.3"
tonic-prost = "0.14.5"
tonic-health = "0.14.5"
tonic-reflection = "0.14.5"

[dev-dependencies]
serial_test = "3.4.0"

[build-dependencies]
tonic-prost-build = "0.14.5"

[lints.clippy]
upper_case_acronyms = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
doc_lazy_continuation = "allow"
collapsible_if = "allow"
