[package]
name = "coolercontrold"
version = "4.3.1"
authors = ["Guy Boldon <gb@guyboldon.com>"]
edition = "2024"
# MSRV. Stays at 1.85 The default features enable `compio-rt`, which pulls in compio and raises
# the effective default MSRV to 1.88. rust-version is feature-independent, so we cannot encode 1.88
# here without also rejecting the supported 1.85 no-default build.
rust-version = "1.85"
description = "Monitor and control your cooling and other devices"
documentation = "https://coolercontrol.org"
readme = "README.md"
categories = ["hardware-support"]
keywords = ["temperature", "hardware", "cooling", "fan", "monitor"]
homepage = "https://coolercontrol.org"
repository = "https://gitlab.com/coolercontrol/coolercontrol"
license = "GPL-3.0-or-later"

[features]
default = ["compio-rt"]
# compio main runtime (default, requires Rust 1.88). When off (`--no-default-features`, builds on
# Rust 1.85).
compio-rt = ["dep:compio", "dep:cyper-core", "dep:compio-buf"]
# Gates tests excluded from the normal suite: ones unreliable outside a controlled environment
# (wall-clock latency assertions, performance-sensitive, real hardware). Off by default; CI enables
# them with `--features gated-tests`. See RUST_STYLE.md "Gated Tests".
gated-tests = []

[dependencies]
cc-detect = { path = "../cc-detect" }
cc-image = { path = "../cc-image" }
cc-stress = { path = "../cc-stress" }
# compio (opt-in `compio-rt` feature). Pinned to 0.18: the compio ecosystem adopts just-stabilized
# stdlib features aggressively, which raises the MSRV. 0.18 + the `compio-buf` pin below builds on
# Rust 1.88 (0.19 needs 1.95: `cfg_select`).
# Fusion driver = io-uring + polling: auto-falls-back to polling when io_uring is unavailable
# (e.g. kernel.io_uring_disabled=2). (0.18 has no `fs-dir` feature; the directory helpers we use
# live under `fs`.
compio = { version = "=0.18.0", default-features = false, features = [
  "runtime",
  "time",
  "signal",
  "fs",
  "net",
  "process",
  "io-uring",
  "polling",
], optional = true }
# cyper-core bridges a compio stream (our UDS to liqctld) into hyper's IO traits via `HyperStream`.
# Pinned to 0.8: it must resolve to the same compio 0.18 as above, or the stream types will not match.
cyper-core = { version = "=0.8.0", default-features = false, optional = true }
# Pin compio-buf below 0.8.2: 0.8.2 uses the `maybe_uninit_slice` stdlib method (Rust 1.93), which
# would raise the compio-rt MSRV from 1.88 to 1.93. 0.8.1 is the newest that compiles on 1.88.
compio-buf = { version = "=0.8.1", default-features = false, optional = true }
log = "0.4.30"
env_logger = "0.11.10"
systemd-journal-logger = "2.2.2"
clap = { version = "4.6.1", features = [
  "derive",
] } # Command line argument parser - pkg
anyhow = "1.0.102"
derive_more = { version = "2.1.1", features = ["display", "error"] }
tokio = { version = "1.52.3", default-features = false, features = [
  "rt",
  "fs",
  "macros",
  "parking_lot",
  "time",
  "sync",
  "signal",
  "net",
  "io-std",
  "io-util",
  "process",
] }
tokio-util = "0.7.18"
tokio-stream = { version = "0.1.18", default-features = false, features = [
  "sync",
  "io-util",
] }
moro-local = "0.4.0"
async-trait = "0.1.89"
bitflags = { version = "2.11.1", features = ["serde"] }
axum = { version = "0.8.9", features = ["multipart", "macros", "query"] }
# This should follow the dependencies of axum version as well
tower = { version = "0.5.3" }
tower-http = { version = "0.6.11", features = [
  "timeout",
  "trace",
  "limit",
  "cors",
  "normalize-path",
  "compression-full",
  "decompression-full",
  "fs",
] }
tower-sessions = { version = "0.15.0", features = ["private"] }
tower-sessions-core = { version = "0.15.0", features = ["deletion-task"] }
base64 = "0.22"
# time > 0.3.45 requires rust >=1.88; patched locally for CVE-2026-25727
time = "=0.3.45"
tower-serve-static = "0.1.2"
include_dir = "0.7.4"
aide = { version = "0.15.1", features = [
  "axum",
  "axum-json",
  "axum-query",
  "axum-multipart",
] }
# this needs to follow the aide version above (currently 0.9.0)
schemars = { version = "=0.9.0", features = ["chrono04"] }
mime = "0.3.17"
# axum-typed-multipart 0.16.5 requires >=1.88
axum_typed_multipart = "=0.16.4"
# axum-typed-multipart-macros is a dependency of axum-typed-multipart that, if pinned, we should pin to the same version
axum_typed_multipart_macros = "=0.16.4"
# possible openApi improvement, but doesn't work for us currently:
#aide-axum-typed-multipart-2 = "0.16.0"
# TLS support: use ring as the rustls crypto provider (already pulled in by rcgen)
# to avoid the aws-lc-rs/aws-lc-sys C dependency tree.
axum-server = { version = "0.8.0", default-features = false, features = [
  "tls-rustls-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "logging",
  "std",
  "tls12",
] }
# >=0.14.8 requires rustc 1.88
rcgen = "=0.14.7"
pin-project-lite = "0.2"
tokio-rustls = { version = "0.26", default-features = false, features = [
  "ring",
  "logging",
  "tls12",
] }
tempfile = "3.27"
hyper = { version = "1.9.0", default-features = false, features = [
  "http1",
  "client",
] }
hyper-util = { version = "0.1.20", default-features = false, features = [
  "client",
  "http1",
  "tokio",
] }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# zbus >=5.14.0 requires >=1.87
zbus = { version = "=5.13.0", default-features = false, features = [
  "tokio",
] } # our preferred DBus lib
futures-util = { version = "0.3.32", default-features = false, features = [
  "std",
] } # future utilities we use like join3
# sysinfo 0.37 requires >=1.88
sysinfo = { version = "=0.36", default-features = false, features = [
  "system",
] } # gets detailed system info
chrono = { version = "0.4.44", features = [
  "serde",
] } # We use timestamps in our status history
strum = { version = "0.28.0", features = ["derive"] } # Enum -> String
regex = "1.12.3"
heck = "0.5.0" # hanldes case conversion like CamelCase and Title Case.
# nu-glob 0.108 requires >=1.86
nu-glob = "=0.107"
nvml-wrapper = "0.12.1"
# libloading 0.9.0 requires rust 1.88
libloading = "=0.8"
sha2 = "0.11.0"
argon2 = "0.5"
subtle = "2.6"
toml_edit = "0.23.9"
nix = { version = "0.31.3", default-features = false, features = [
  "user",
  "signal",
  "process",
  "sched",
  "net",
] }
libdrm_amdgpu_sys = { version = "0.8.16", default-features = false, features = [
  "dynamic_loading",
] }
indexmap = "2.14"
uuid = { version = "1.23.1", features = ["v4"] }
# service plugin dependencies
# >= 0.14.6 requires rustc 1.88:
tonic = { version = "=0.14.5", default-features = false, features = [
  "channel",
  "codegen",
  "server",
  "transport",
  "router",
] }
prost = "0.14.3"
# >= 0.14.6 requires rustc 1.88:
tonic-prost = "=0.14.5"
tonic-health = "=0.14.5"
tonic-reflection = "=0.14.5"

[dev-dependencies]
serial_test = "3.4.0"
tokio = { version = "1.52.3", default-features = false, features = [
  "test-util",
] }

[build-dependencies]
# >= 0.14.6 requires rustc 1.88:
tonic-prost-build = "=0.14.5"
tonic-build = "=0.14.5"

[lints.clippy]
upper_case_acronyms = "allow"
type_complexity = "allow"
too_many_arguments = "allow"
doc_lazy_continuation = "allow"
collapsible_if = "allow"
